plugins {
	id 'org.springframework.boot' version '2.6.7'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'application'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(19)
	}
}

application {
	applicationDefaultJvmArgs += ['--enable-preview']
}

springBoot {
	mainClass = 'loomtest.ServletFrontendApplication'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation('org.springframework.boot:spring-boot-starter-web') {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
	}
	implementation 'org.springframework.boot:spring-boot-starter-jetty'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
}
